# -EDD-Proyectos_202202233

./: README.md
Proyecto Fase 1/: copia.cpp  main.cpp
Proyecto Fase 1/controller/: user_Controller.cpp  user_Controller.h
Proyecto Fase 1/data/: publicaciones.json  solicitudes.json  usuarios.json
Proyecto Fase 1/data_Structs/: LinkedList.cpp  LinkedList.h  LinkedList_Sol.cpp  LinkedList_Sol.h  Node.cpp  Node.h  Node_Sol.h
Proyecto Fase 1/data_Structs/circularList/: CircularList.h
Proyecto Fase 1/data_Structs/doubleLit/: dobleList.h
Proyecto Fase 1/data_Structs/matriz_struct/: Matriz.cpp  Matriz.h  Node.h  NodeVal.h
Proyecto Fase 1/models/: publicacion.h  solicitud.h  user.cpp  user.h
Proyecto Fase 1/report/: List_Posts.dot  list_Users.dot  lista_Circular.dot  matriz.dot  pila.dot  solicitudes.dot
Proyecto Fase 1/sys/: menu_Base.cpp
Proyecto_Fase2/: Abb.h  CMakeLists.txt  Node.h  NodePost.h  Node_Sol.h  Solicitud.h  avl.h  dialog_reporte.h  dialognewpost.cpp  dialognewpost.h  dialognewpost.ui  dobleList.h  linkedlist.cpp  linkedlist.h  linkedlist_sol.cpp  linkedlist_sol.h  linkedlistpost.cpp  linkedlistpost.h  main.cpp  menu.cpp  ordenamientoABB.cpp  publicacion.h  user.h  user_controller.cpp  user_controller.h  ventanabase.cpp  ventanabase.h  ventanabase.ui  viewsctr.cpp  viewsctr.h  widget_ctruser_admin.cpp  widget_ctruser_admin.h  widget_ctruser_admin.ui  widget_login.cpp  widget_login.h  widget_sigup.ui  widgetbuscaruser.cpp  widgetbuscaruser.h  widgetcargasmasivas.cpp  widgetcargasmasivas.h  (+15 more)
Proyecto_Fase2/report/: List_Posts.dot  abb.dot  abbDate.dot  avl_Users.dot
Proyecto_Fase3/Fase3/: Abb.h  CMakeLists.txt  ListOfList.h  Matriz.h  avl.h  bloque.h  dialog_reporte.cpp  dialog_reporte.ui  dobleList.h  linkedListBlockCHain.h  linkedlist.cpp  linkedlist.h  linkedlist_sol.cpp  linkedlist_sol.h  linkedlistpost.cpp  linkedlistpost.h  main.cpp  main.h  menu.h  publicacion.h  treeMerkle.h  user.cpp  user_controller.cpp  user_controller.h  viewsctr.cpp  viewsctr.h  widget_ctruser_admin.h  widget_ctruser_admin.ui  widget_login.ui  widget_sigup.cpp  widget_sigup.h  widgetbuscaruser.ui  widgetcargasmasivas.ui  widgetctradmin.h  widgetctradmin.ui  widgetctruser.cpp  widgetctruser.h  widgetctruser.ui  widgetperfil.cpp  widgetperfil.h  (+13 more)
Proyecto_Fase3/Fase3/blockChain/: BloqueNo0.json  BloqueNo1.json  BloqueNo2.json  BloqueNo3.json  BloqueNo4.json  BloqueNo5.json  BloqueNo6.json
Proyecto_Fase3/Fase3/reportes/: adjacency_list_boxes.dot  graph.dot  treeMerkle.dot
Proyecto_Fase_2/: CMakeLists.txt  adminvew.cpp  adminvew.h  adminvew.ui  linkedlist.cpp  linkedlist.h  main.cpp  mainview.cpp  mainview.h  mainview.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerview.cpp  registerview.h  registerview.ui  tablemodeluser.cpp  tablemodeluser.h  user.cpp  user.h  user_controller.cpp  user_controller.h  usuarioswidget.cpp  usuarioswidget.h  usuarioswidget.ui
